--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-3/int08-3-3.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-3/int08-3-3.component.html
@@ -1,47 +1,88 @@
 <div class="ui grid">
   <div class="sixteen wide column">
-    <h2 class="ui header">ประเมินคดี</h2>
+    <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
+      <span>กำหนดปัจจัยเสี่ยงประเมินความเสี่ยงโครงการยุทธศาสตร์ของกรมสรรพสามิต</span>
+    </div>
+    <div class="ui attached segment">
+      <div class="ui form">
+        <div class="inline fields">
+          <div class="two wide field "></div>
+          <div class="two wide field ">
+            <label class="ui right ">ชื่อกระดาษทำการ</label>
+          </div>
+          <div class="ten wide field ">
+            <input type="text" placeholder="ชื่อกระดาษทำการ" maxlength="100" class="custom" name="riskHrdPaperName" id="riskHrdPaperName"
+              [(ngModel)]="riskHrdPaperName">
+          </div>
 
+        </div>
+        <div class="inline fields">
+          <div class="two wide field "></div>
+          <div class="two wide field">
+            <label>ปีงบประมาณ</label>
+          </div>
+          <div class="four wide field ">
+            <input type="text" placeholder="ปีงบประมาณ" class="custom" name="budgetYear" id="budgetYear" [(ngModel)]="budgetYear" disabled="disabled">
+          </div>
+          <div class="two wide field ">
+            <label>ผู้ตรวจ</label>
+          </div>
+          <div class="four wide field ">
+            <input type="text" placeholder="ผู้ตรวจ" class="custom" name="userCheck" id="userCheck" [(ngModel)]="userCheck">
+          </div>
+        </div>
+        <table id="dataTable" class="ui small celled table">
+          <thead>
+            <tr>
+              <th rowspan="2" style="text-align: center !important">ลำดับ</th>
+              <th rowspan="2" style="text-align: center !important">หน่วยงาน</th>
+              <th rowspan="2" style="text-align: center !important">วันที่ออกตรวจ</th>
+              <th rowspan="2" style="text-align: center !important">วันที่ปิดตรวจ</th>
+              <th rowspan="2" style="text-align: center !important">ประเมินความเสี่ยง</th>
+              <th rowspan="2" style="text-align: center !important">จำนวนปี</th>
+              <th colspan="2" style="text-align: center !important">ประเมินความเสี่ยง</th>
+            </tr>
+            <tr>
+              <th style="text-align: center !important; border-left: 1px solid rgba(34,36,38,.1) !important">RL</th>
+              <th style="text-align: center !important">แปลค่า</th>
 
+            </tr>
+          </thead>
+        </table>
+        <div class="inline fields"></div>
+        <div class="inline fields ">
+          <div class="sixteen wide field ">
+            <div class="six wide field "></div>
+            <button class="ui mini primary button" (click)="saveRiskAssRiskWsDtl()">
+              <i class="save icon"></i>
+              บันทึก
+            </button>
+            <button class="ui mini primary button" (click)="modalConditionRL()">
+              กำหนดเงื่อนไข RL
+            </button>
+            <button class="ui mini primary button" (click)="addRiskAssRiskWsHdr()">
+              Export
+            </button>
+            <button class="ui mini primary button" (click)="cancelFlow()">
+              ยกเลิก
+            </button>
+          </div>
 
-
-    <div class="ui top attached header">
-      <span>ประเมินคดี</span>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="sixteen wide column" *ngIf="getConditionShow()">
+    <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
+      <span>กำหนดเงื่อนไข RL ปัจจัยเสี่ยงความถี่การเข้าตรวจสอบ</span>
     </div>
 
     <div class="ui attached segment">
-      <div class="ui three column center aligned grid">
-        <div class="column ">
-          <button class="ui mini primary button" style="width:250px;" routerLink="/int08/3/3/1">
-            <i class="line chart icon"></i>
-            ประเมินคดีด้านจำนวนค่าปรับ
-          </button>
-        </div>
-        <div class="column ">
-          <button class="ui mini primary button" style="width:250px;" routerLink="/int08/3/3/2">
-            <i class="line chart icon"></i>
-            ประเมินคดีด้านจำนวนคดี
-          </button>
-        </div>
-        <div class="column ">
-          <button class="ui mini primary button" style="width:250px;" routerLink="/int08/3/3/3">
-            <i class="line chart icon"></i>
-            ประเมินคดีภาพรวม
-          </button>
-        </div>
+      <div class="ui form">
+        <condition [riskId]="id" [riskType]="'MAIN'" [page]="'int08-1-5'" (out)="closeConditionRL($event)"></condition>
       </div>
+      <br/>
 
     </div>
-
-    <br>
-    <div class="ui center aligned grid">
-      <div class="sixteen wide column">
-        <button class="ui mini button" routerLink="/int08-3">
-          <i class="arrow left icon"></i>
-          ย้อนกลับ
-        </button>
-      </div>
-    </div>
-
   </div>
 </div>
